--- a/hero-conjurer/templates/parts/spells/spells-first.html
+++ b/hero-conjurer/templates/parts/spells/spells-first.html
@@ -1,58 +1,25 @@
-<div id='HC-form'>
-    <form autocomplete='off' class='form'>
-        <input type='hidden' name='sheet' id='sheet' value='spells'>
-
-        <!-- Tabs -->
-        <nav id='HC-header'>
-            <a class='tablinks navigate race'>RACE</a>
-            <a class='tablinks navigate class'>CLASS</a>
-            <a class='tablinks navigate abilities'>ABILITIES</a>
-            <a class='tablinks navigate background'>BACKGROUND</a>
-            <a class='tablinks navigate equipment'>EQUIPMENT</a>
-            <a class='tablinks navigate spells active'>SPELLS</a>
-            <a class='tablinks navigate feats'>FEATS</a>
-            <a class='tablinks navigate bio'>BIO</a>
-            <a class='tablinks navigate summary'>SUMMARY</a>
-        </nav>
-
-        <!-- Tab content -->
-        <div id='HC-content'>
-            <nav class='subtab'>
-                <a class='subtablinks navigate spells-cantrip'>0</a>
-                <a class='subtablinks navigate spells-first active'>I</a>
-            </nav>
-
-            {{#if data.class.name}}
-            <div class='choice-pane'>
-
-                <h3>1st Level Spells:&nbsp</h3>
-                {{#each data.class.spells.[1]}}
-                <div class='class-entry'>
-                    <img class='selector draggable' src='{{this.data.img}}' value='Spells:{{this.name}}' name='spells'
-                        id='{{this.name}}'>
-                    <h3>{{this.name}}</h3>
-                </div>
-                {{/each}}
-            </div>
-
-            <div class='spellbook droppable' style='border: 3px #000000 solid'>
-                <div style='text-align:center;'>
-                    <span>Spellbook:&nbsp</span>
-                </div>
-                {{#each data.spells.imgs}}
-                <div class='class-entry'>
-                    <img class='selector draggable' src='{{this}}' name='spells'>
-                </div>
-                {{/each}}
-            </div>
-
-            {{/if}}
-
+<div class='spells-first fill'>
+    <div class='choice-pane spell-pane'>
+        {{#each data.class.spells.[1]}}
+        <div class='spell-entry draggable'>
+            <img class='spell-icon' src='{{this.data.img}}' value='Spells:{{this.name}}' name='spells'
+                id='{{this.name}}'>
+            <span class='spell-info'>{{this.name}}</span>
+            <span class='spell-info' style='font-size: 1.6em;'>{{this.labels.school}}</span>
         </div>
+        {{/each}}
+    </div>
 
-        <div id='HC-navigate'>
-            <button type='submit' class='navigate prev'>PREVIOUS</button>
-            <button type='submit' class='navigate next'>NEXT</button>
+    {{!-- Spellbook --}}
+    <div class='spellbook droppable'>
+        <div style='text-align:center;'>
+            <h2 style='width: 100%;'>Spellbook:&nbsp</h2>
         </div>
-    </form>
+        {{#each data.spells.imgs}}
+        <div class='spell-recorded draggable'>
+            <img class='spell-recorded-icon' style='position: relative; width: 30px; height: 30px;' src='{{this}}' name='spells'>
+            <span class='spell-recorded-info'>{{lookup ../data.spells.names @index}}</span>
+        </div>
+        {{/each}}
+    </div>
 </div>
