--- a/hero-conjurer/templates/start.html
+++ b/hero-conjurer/templates/start.html
@@ -21,9 +21,11 @@
 
             {{!-- Start Tab --}}
             <div class='tab fill' data-tab='start' data-group="primary">
-                <div class='banner-container'>
+                <div class='banner-container' style='margin-top: 10%; margin-bottom: 10%'>
                     <img class='banner' src="modules/hero-conjurer/images/banner.png">
                 </div>
+                <h3 class='title'>Welcome to the D&D 5E SRD character creator</h3>
+                <h3 class='title'>Select a tab to customize a new hero</h3>
             </div>
 
             {{!-- Race Tab --}}
