--- a/hero-conjurer/css/conjurer.css
+++ b/hero-conjurer/css/conjurer.css
@@ -1,10 +1,7 @@
 /* Parent form */
 #HC-form {
   display: flex;
-  width: 941px;
-  height: 800px;
   font-family: "Nodesto", "Signika", "Palatino Linotype", serif;
-  max-height: 800px;
 }
 #HC-form .form {
   width: 100%;
@@ -35,7 +32,6 @@
   overflow: hidden;
   width: 100%;
   margin: auto;
-  margin-left: -0.5%;
 }
 
 #HC-header .tablinks {
@@ -56,8 +52,6 @@
 #HC-header .tablinks.active {
   color: #dbdbdb;
   background-color: #b30000;
-  border: 1px solid #000000;
-  border-bottom: 0;
   text-shadow: none;
 }
 #HC-header .tablinks.active:hover {
@@ -137,20 +131,22 @@
 /* Style the tab content */
 #HC-content {
   padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
   width: 100%;
   height: 100%;
 } 
 
+#HC-content .dropdown {
+  width: 100%;
+  margin: 5%;
+}
+
 #HC-content .subtabs {
-  position: relative;
-  width: 10%;
+  position: absolute;
+  width: 8%;
   font-size: 40px;
   left: -1%;
-  border-bottom: 2px black solid;
-  margin: 1% auto;
-  display: flex;
+  border-right: 2px black solid;
+  display: block;
 }
 
 #HC-content .subtablinks {
@@ -160,6 +156,12 @@
   text-align: center;
   position: relative;
   transition: 0.3s;
+}
+
+#HC-content .subcontent {
+  position: absolute;
+  left: 8%;
+  width: 92%;
 }
 
 #HC-content .subtablinks.active {
@@ -194,7 +196,6 @@
   float: right;
   width: 68%;
   height: 100%;
-  overflow: scroll;
 }
 
 #HC-content .spellbook {
@@ -202,13 +203,13 @@
   position: relative;
   width: 55%;
   height: 60%;
-  left: -2%;
+  left: 1%;
   border: 2px #000000 solid;
-  overflow: scroll;
+  overflow: auto;
 }
 
 #HC-content .spell-pane {
-  overflow: scroll;
+  overflow: auto;
   max-height: 800px;
   width: 40%;
   padding: 5px;
@@ -233,7 +234,7 @@
 #HC-content .spell-recorded {
   margin: 2%;
   background-color: rgba(0, 0, 0, 0.1);
-  border: 2px black solid;
+  border: 2px #000000 solid;
   width: 45%;
   position: relative;
   height: auto;
@@ -268,13 +269,32 @@
 }
 
 #HC-content .spell-recorded-icon {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   position: absolute;
   float: left;
-  margin: 2%;
+  margin-top: 4%;
+  margin-left: 4%;
+}
+#HC-content .header {
+  font-size: 1.6em;
+  width: 100%;
+  text-align: center;
+  margin: auto;
 }
 
+#HC-content .title {
+  font-size: 2em;
+  width: 100%;
+  text-align: center;
+  margin: auto;
+}
+
+#HC-content .subheader {
+  font-size: 1.4em;
+  text-align: center;
+  margin: auto;
+}
 #HC-content .class-entry {
   margin: auto;
 }
@@ -288,13 +308,6 @@
   opacity: 0.5;
 }
 
-.shadow-border {
-  box-shadow: 0 0 8px #b30000;
-}
-.fill {
-  height: 100%;
-  width: 100%;
-}
 #HC-navigate .navigate:hover {
   color: #dbdbdb;
   background-color: #b30000;
@@ -321,4 +334,63 @@
 }
 #HC-navigate .next {
   float: right;
+}
+
+.shadow-border {
+  box-shadow: 0 0 8px #b30000;
+}
+.fill {
+  height: 100%;
+  width: 100%;
+}
+.left {
+  text-align: left;
+}
+.entry {
+  margin: 5%;
+  color: #b30000;
+}
+.container{
+  display: flex;
+}
+.flex-item{
+  flex-grow: 1;
+}
+
+/* The container <div> - needed to position the dropup content */
+.dropup {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropup content (Hidden by Default) */
+.dropup-content {
+  display: none;
+  position: absolute;
+  bottom: 32px;
+  background-color: #f0f0e0;
+  width: 98%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 3px;
+}
+
+/* Links inside the dropup */
+.dropup-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropup links on hover */
+.dropup-content a:hover {background-color: #ddd}
+
+/* Show the dropup menu on hover */
+.dropup:hover .dropup-content {
+  display: block;
+}
+
+.lighten {
+  background-color: rgba(255, 255, 255, 0.4);
 }
